2011-10-18  Dirk Pranke  <dpranke@chromium.org>

        Remove expectations for tests that are no longer failing.

        Unreviewed, expectations change.

        * platform/chromium/test_expectations.txt:

2011-10-18  Dan Bernstein  <mitz@apple.com>

        Certain column-rule styles render incorrectly in vertical writing modes
        https://bugs.webkit.org/show_bug.cgi?id=70362

        Reviewed by Darin Adler.

        * fast/multicol/vertical-rl/rule-style-expected.png: Added.
        * fast/multicol/vertical-rl/rule-style-expected.txt: Added.
        * fast/multicol/vertical-rl/rule-style.html: Added.

2011-10-18  Gavin Barraclough  <barraclough@apple.com>

        Array.prototype methods missing exception checks
        https://bugs.webkit.org/show_bug.cgi?id=70360

        Reviewed by Geoff Garen.

        Missing exception checks after calls to the static getProperty helper,
        these may result in the wrong exception being thrown (or an ASSERT being hit,
        as is currently the case running test-262).

        * fast/js/array-proto-func-property-getter-except-expected.txt:
        * fast/js/script-tests/array-proto-func-property-getter-except.js:
            - The test results that change were only testing for an absence of a crash; the new results are correct
              (the first exception thrown should be the one returned).
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T4-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T6-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T7-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T8-expected.txt: