@@ -1,0 +1,218 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="../js/resources/js-test-style.css">
+<script src="../js/resources/js-test-pre.js"></script>
+<title></title>
+</head>
+<body>
+<p id=description></p>
+<div id="console"></div>
+<script>
+
+window.jsTestIsAsync = true;
+var mutations;
+var mutations2;
+var calls;
+var charDataNode;
+
+function testBasic() {
+    var div;
+    var observer;
+
+    function start() {
+        debug('Testing basic aspects of characterData observation.');
+
+        mutations = null;
+        div = document.createElement('div');
+        div.textContent = 'foo';
+        charDataNode = div.firstChild;
+        observer = new WebKitMutationObserver(function(m) {
+            mutations = m;
+        });
+
+        observer.observe(charDataNode, {characterData: true});
+        charDataNode.textContent = 'bar';
+        setTimeout(checkDisconnectAndMutate, 0);
+    }
+
+    function checkDisconnectAndMutate() {
+        debug('...can characterData changes be observed at all');
+
+        shouldBe('mutations.length', '1');
+        shouldBe('mutations[0].type', '"characterData"');
+        shouldBe('mutations[0].target', 'charDataNode');
+
+        mutations = null;
+        observer.disconnect();
+        charDataNode.textContent = 'baz';
+        setTimeout(checkNotDeliveredAndMutateMultiple, 0);
+    }
+
+    function checkNotDeliveredAndMutateMultiple() {
+        debug('...observer.disconnect() should prevent further delivery of mutations.');
+
+        shouldBe('mutations', 'null');
+        charDataNode = document.createComment();
+        observer.observe(charDataNode, { characterData: true });
+        charDataNode.textContent = 'foo';
+        charDataNode.textContent = 'bar';
+        setTimeout(finish);
+    }
+
+    function finish() {
+        debug('...re-observing after disconnect works with the same observer.');
+
+        shouldBe('mutations.length', '2');
+        shouldBe('mutations[0].type', '"characterData"');
+        shouldBe('mutations[0].target', 'charDataNode');
+        shouldBe('mutations[1].type', '"characterData"');
+        shouldBe('mutations[1].target', 'charDataNode');
+        observer.disconnect();
+        debug('');
+        runNextTest();
+    }
+
+    start();
+}
+
+function testWrongType() {
+    var div;
+    var observer;
+
+    function start() {
+        debug('Testing that observing without specifying "characterData" does not result in hearing about characterData changes.');
+
+        mutations = null;
+        div = document.createElement('div');
+        div.textContent = 'hello';
+        charDataNode = div.firstChild;
+        observer = new WebKitMutationObserver(function(m) {
+            mutations = m;
+        });
+
+        observer.observe(charDataNode, {childList: true, attributes: true});
+        charDataNode = 'goodbye';
+        setTimeout(finish, 0);
+    }
+
+    function finish() {
+        shouldBe('mutations', 'null');
+        observer.disconnect();
+        debug('');
+        runNextTest();
+    }
+
+    start();
+}
+
+function testMultipleObservers() {
+    var div;
+    var observer;
+    var observer2;
+
+    function start() {
+        debug('Testing that multiple observers can be registered to a given node and both receive mutations.');
+        mutations = null;
+        div = document.createElement('div');
+        div.textContent = 'foo';
+        charDataNode = div.firstChild;
+        observer = new WebKitMutationObserver(function(m) {
+            mutations = m;
+        });
+        observer2 = new WebKitMutationObserver(function(m) {
+            mutations2 = m;
+        });
+        observer.observe(charDataNode, {characterData: true});
+        observer2.observe(charDataNode, {characterData: true});
+        charDataNode.textContent = 'bar';
+        setTimeout(finish, 0);
+    }
+
+    function finish() {
+        shouldBe('mutations.length', '1');
+        shouldBe('mutations[0].type', '"characterData"');
+        shouldBe('mutations[0].target', 'charDataNode');
+        shouldBe('mutations2.length', '1');
+        shouldBe('mutations2[0].type', '"characterData"');
+        shouldBe('mutations2[0].target', 'charDataNode');
+        observer.disconnect();
+        observer2.disconnect();
+        debug('');
+        runNextTest();
+    }
+
+    start();
+}
+
+function testOrderingWrtDOMSubtreeModified() {
+    var div, div2, subDiv;
+    var observer;
+    var listener;
+
+    function start() {
+        debug('Testing mutation records are enqueued for characterData before DOMSubtreeModified is dispatched.');
+
+        mutations = null;
+        div = document.body.appendChild(document.createElement('div'));
+        div2 = document.body.appendChild(document.createElement('div'));
+
+        subDiv = div.appendChild(document.createElement('div'));
+        subDiv.textContent = 'foo';
+        charDataNode = subDiv.firstChild;
+
+        observer = new WebKitMutationObserver(function(m) {
+            mutations = m;
+        });
+
+        listener = function(e) {
+            div2.setAttribute('baz', 'bat');
+        }
+
+        div.addEventListener('DOMSubtreeModified', listener);
+        observer.observe(charDataNode, {characterData: true});
+        observer.observe(div2, {attributes: true});
+
+        charDataNode.textContent = 'bar';
+
+        setTimeout(finish, 0);
+    }
+
+    function finish() {
+        shouldBe('mutations.length', '2');
+        shouldBe('mutations[0].type', '"characterData"');
+        shouldBe('mutations[1].type', '"attributes"');
+        div.removeEventListener(listener);
+        document.body.removeChild(div);
+        observer.disconnect();
+        debug('');
+        runNextTest();
+    }
+
+    start();
+}
+
+var tests = [testBasic, testWrongType, testMultipleObservers, testOrderingWrtDOMSubtreeModified];
+var testIndex = 0;
+
+function runNextTest() {
+    if (testIndex < tests.length)
+        tests[testIndex++]();
+    else
+        finishJSTest();
+}
+
+description('Test WebKitMutationObserver.observe on CharacterData nodes');
+
+if (!window.WebKitMutationObserver)
+    testFailed('This test requires ENABLE(MUTATION_OBSERVERS)');
+else
+    runNextTest();
+
+var successfullyParsed = true;
+
+</script>
+<script src="../js/resources/js-test-post.js"></script>
+</body>
+</html>
