@@ -1,3 +1,15 @@
+2011-10-18  Adam Klein  <adamk@chromium.org>
+
+        [MutationObservers] Implement WebKitMutationObserver.observe for characterData changes
+        https://bugs.webkit.org/show_bug.cgi?id=68957
+
+        Reviewed by Ryosuke Niwa.
+
+        Test: fast/mutation/observe-characterdata.html
+
+        * dom/CharacterData.cpp:
+        (WebCore::CharacterData::dispatchModifiedEvent):
+
 2011-10-18  Scott Byer  <scottbyer@chromium.org>
 
         Scroll animator tracing
