@@ -1,3 +1,13 @@
+2011-10-18  Adam Klein  <adamk@chromium.org>
+
+        [MutationObservers] Implement WebKitMutationObserver.observe for characterData changes
+        https://bugs.webkit.org/show_bug.cgi?id=68957
+
+        Reviewed by Ryosuke Niwa.
+
+        * fast/mutation/observe-characterdata-expected.txt: Added.
+        * fast/mutation/observe-characterdata.html: Added.
+
 2011-10-18  Dirk Pranke  <dpranke@chromium.org>
 
         Remove expectations for tests that are no longer failing.
